--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
         "cors": "^2.8.5",
         "escpos": "^3.0.0-alpha.6",
         "escpos-network": "^3.0.0-alpha.5",
+        "escpos-serialport": "^3.0.0-alpha.4",
         "escpos-usb": "^3.0.0-alpha.4",
         "express": "^5.1.0",
-        "printer": "^0.4.0",
         "usb": "^1.9.2"
     },
     "devDependencies": {
