Update POS printer configuration and GUI setup: modify config.json for Windows printer type, enhance .gitignore, add GUI for printer setup, and implement service installation scripts.

--- a/config.json
+++ b/config.json
@@ -1,11 +1,8 @@
 {
-    "printerType": "serial",
-    "serialPort":"LPT1",
-    "printerName": "POS58 Printer",
-    "printerIP": "",
-    "usb": {
-      "idVendor": 1155,
-      "idProduct": 22304
-    },
-    "businessName": "Qery Store"
-  }
+  "printerType": "windows",
+  "serialPort": "LPT1",
+  "printerName": "POS58 Printer",
+  "printerIP": "",
+  "usb": "[object Object]",
+  "businessName": "Qery Store"
+}
