--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,8 +32,10 @@ jobs:
 
       - name: Get version
         id: get_version
+        shell: pwsh
         run: |
-          echo "version=$(node -p \"require('./package.json').version\")" >> $GITHUB_OUTPUT
+          $version = node -p "require('./package.json').version"
+          echo "version=$version" >> $env:GITHUB_OUTPUT
 
       - name: Create Release
         id: create_release
