--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "escpos-serialport": "^3.0.0-alpha.4",
         "escpos-usb": "^3.0.0-alpha.4",
         "express": "^5.1.0",
+        "node-windows": "^1.0.0-beta.8",
         "usb": "^1.9.2"
     },
     "devDependencies": {
